plugins {
    id 'org.springframework.boot' version '2.5.2'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

group 'io.keepup.cms'
version '2.0-SNAPSHOT'
description = "keepup-core"

sourceCompatibility = 15
targetCompatibility = 15

publishing {
    publications {
        maven(MavenPublication) {
            groupId 'io.keepup.cms.core'
            artifactId 'keepup-core'
            version '2.0-SNAPSHOT'
            artifact 'build/libs/core-2.0-SNAPSHOT.jar'
        }
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    compile 'org.apache.commons:commons-lang3:3.12.0'
    compile 'commons-io:commons-io:2.11.0'
    compile 'org.hibernate:hibernate-core:5.5.3.Final'
    compile 'org.springframework.boot:spring-boot-starter-actuator'
    compile 'org.springframework.boot:spring-boot-starter-jdbc'
    compile 'org.springframework.boot:spring-boot-starter-webflux'
    compile 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    compile 'org.liquibase:liquibase-core'
    compile 'io.fastjson:boon:0.34'
    compile 'org.springframework.boot:spring-boot-starter'
    compile 'org.springframework.boot:spring-boot-starter-data-r2dbc'
    compile 'io.r2dbc:r2dbc-h2:0.8.1.RELEASE'
    compile 'javax.persistence:javax.persistence-api:2.2'
    compile 'commons-net:commons-net:3.8.0'

    implementation 'org.jetbrains:annotations:22.0.0'
    implementation 'javax.servlet:javax.servlet-api:4.0.1'
    runtimeOnly 'com.h2database:h2:1.4.200'

    testImplementation 'org.junit.platform:junit-platform-runner:1.7.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.mockftpserver:MockFtpServer:2.8.0'
    testImplementation 'it.ozimov:embedded-redis:0.7.3'
    testImplementation 'com.github.fppt:jedis-mock:0.1.22'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

configurations {
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'ch.qos.logback', module: 'logback-classic'
        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
    }
}

test {
    useJUnitPlatform()
    classpath = project.sourceSets.test.runtimeClasspath + files("${projectDir}/src/test/resources/mock-keepup-app.jar")

}
task writeNewPom {
    doLast {
        pom {
            project {
                groupId 'io.keepup.cms'
                artifactId 'core'
                version '2.0-SNAPSHOT'
                inceptionYear '2021'
                licenses {
                    license {
                        name 'MIT License'
                        url 'http://www.opensource.org/licenses/mit-license.php'
                        distribution 'repo'
                    }
                }
            }
        }.writeTo("pom.xml")
    }
}